--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Sitio Web</title>
+    <title>Index</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
     </section>
     
     <footer>
-        <p>Derechos de autor &copy; 2024 - Mi Sitio Web</p>
+        <p>Derechos de autor &copy; 2024 - Guillermo Acosta</p>
     </footer>
 </body>
 </html>
